release-note/1.6.2-beta1/ru_RU.md
## [1.6.2-beta1]

### Security
- Срочно исправлена ​​проблема безопасности с высоким уровнем риска в модуле управления учетными записями, что еще больше повышает безопасность операций администратора.
- Срочно устранена проблема безопасности с высоким уровнем риска в файловой службе, повышена безопасность доступа к файлам и операций.

### New
- Добавлен темный режим для приложения «Файлы».
- Добавлена ​​поддержка интеграции с Alibaba Cloud Drive.
- Обновлено ядро ​​Linux до 6.18.9.
- Добавлена ​​поддержка драйверов для модулей NVIDIA 470/580/Open Kernel, Intel Xe/Battlemage, Realtek RTW88/RTL8127, беспроводных устройств Intel/MediaTek/AIC8800 и аудиоустройств Cirrus Logic, а также добавлен механизм автоматического обнаружения и адаптации драйверов NVIDIA, который автоматически подбирает соответствующую версию драйвера в зависимости от оборудования.

### Fixed
- Исправлен истечение срока действия ключа OneDrive, приводившее к проблемам с подключением, восстановлена ​​базовая доступность интеграции и оптимизирован механизм обновления ключа.
- Исправлена ​​проблема, из-за которой приложение Collabora Server блокировало резервное копирование, обеспечивая правильную работу задач резервного копирования.
- Исправлена ​​проблема, из-за которой нескольким USB-устройствам хранения данных могла быть назначена одна и та же точка подключения при запуске.
- Исправлена ​​проблема, из-за которой устаревшие суффиксы `-device-name` создавались при конфликте точек подключения USB.
- Исправлена ​​проблема, из-за которой хранилище, созданное на одноразделовом диске, не использовало указанное пользователем имя в качестве точки монтирования.
- Исправлена ​​деградация RAID после перезагрузки, когда RAID-массив был создан из дисков с одинаковым серийным номером.
- Исправлены ложные срабатывания при проверке запуска RAID, вызванные несовместимыми форматами имен устройств во время выполнения.

### Optimized
- Оптимизированы рабочие процессы высокочастотных операций с файлами, такие как импорт, миграция, шифрование, копирование и вырезание.
- Оптимизированное отображение статуса загрузки на облачный диск, позволяющее пользователям лучше понять текущий прогресс, статус завершения и причины сбоя.

### Tips
- Если у вас возникнут какие-либо проблемы с программным обеспечением, присоединяйтесь к нашему сообществу Discord, чтобы связаться и получить поддержку от более чем 43 000 участников Zima!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue">https://zimaboard.com/discord</a>
